<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <!--hien thi anh Viet Nam va text-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView android:id="@+id/imgView1"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/heightImageView"
            android:src="@drawable/vietnam"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_VietNam"
            android:layout_gravity="center"
            android:textSize="@dimen/titleSizeVN"
            />
    </LinearLayout>
    <!--ket thuc -->
    <!--hien thi 2 annh -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/btnImgHotel"
            android:layout_width="@dimen/widthLocation"
            android:layout_height="@dimen/heightLocation"
            android:layout_weight="@dimen/weightImage"
            android:src="@drawable/hotel"
            android:layout_marginBottom="@dimen/marginBottomImg"

            />
        <ImageView
            android:id="@+id/btnImgATM"
            android:layout_width="@dimen/widthLocation"
            android:layout_height="@dimen/heightLocation"
            android:layout_weight="@dimen/weightImage"
            android:src="@drawable/atm_machine"
            android:layout_marginBottom="@dimen/marginBottomImg"
            />
    </LinearLayout>
    <!--hien thi title hotel va ATM -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weightTitle"
            android:text="@string/app_hotel"
            android:layout_marginLeft="@dimen/marginLeftText"
            android:layout_marginTop="@dimen/marginTopText"
            />
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weightTitle"
            android:text="@string/app_atm"
            android:layout_marginLeft="@dimen/marginLeftText"
            android:layout_marginTop="@dimen/marginTopText"
            />
    </LinearLayout>
    <!--dong 2 hien thi 2 cai anh tiep theo-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/marginTopLinearLayout"
        >
        <ImageView
            android:id="@+id/btnImgHospital"
            android:layout_width="@dimen/widthLocation"
            android:layout_height="@dimen/heightLocation"
            android:layout_weight="@dimen/weightTitle"
            android:src="@drawable/hospital"
            android:layout_marginBottom="@dimen/imagebottom"
            />
        <ImageView
            android:id="@+id/btnImgBus"
            android:layout_width="@dimen/widthLocation"
            android:layout_height="@dimen/heightLocation"
            android:layout_weight="@dimen/weightTitle"
            android:src="@drawable/metro"
            android:layout_marginBottom="@dimen/imagebottom"
            />
    </LinearLayout>
    <!--hien thi 2 dong text-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/marginTopLinearLayout"
        >
        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weightTitle"
            android:text="@string/app_hospital"
            android:layout_marginLeft="@dimen/marginLeftText"
            android:layout_marginTop="@dimen/marginTopText"
            />
        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weightTitle"
            android:text="@string/app_bus"
            android:layout_marginLeft="@dimen/marginLeftText"
            android:layout_marginTop="@dimen/marginTopText"
            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>

